<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeleccionarZona">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:paddingVertical="25dp"
            android:text="@string/introduccion"/>
        <RadioButton
            android:id="@+id/btnCerdeña"
            android:text="@string/Cerdeña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingLeft="25dp"
            android:paddingVertical="25dp"/>
        <RadioButton
            android:id="@+id/btnIcaria"
            android:text="@string/Icaria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingLeft="25dp"
            android:paddingVertical="25dp"/>
        <RadioButton
            android:id="@+id/btnLoma_Linda"
            android:text="@string/Loma_Linda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingLeft="25dp"
            android:paddingVertical="25dp"/>
        <RadioButton
            android:id="@+id/btnNicoya"
            android:text="@string/Nicoya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingLeft="25dp"
            android:paddingVertical="25dp"/>
        <RadioButton
            android:id="@+id/btnOkinawa"
            android:text="@string/Okinawa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingLeft="25dp"
            android:paddingVertical="25dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>